# user_notification

./: .env.template  Dockerfile  README.md  conf.py  debug_run.py  docker-compose.yml  main.py  pyproject.toml  setup.cfg
app/: celery.py  fastapi_app.py  notification.py  schemas.py  tasks.py
app/notification_service/: __init__.py  postman_service.py
app/notification_service/methods/: __init__.py  base_method.py  email_method.py  sms_processing_method.py  telegram_method.py
