[project]
name = "user-notification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "celery[redis]>=5.5.3",
    "fastapi>=0.116.2",
    "pydantic-settings>=2.10.1",
    "pydantic[email]>=2.11.9",
    "requests>=2.32.5",
    "uvicorn>=0.36.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "flake8>=7.3.0",
    "isort>=6.0.1",
]


[tool.black]
line-length = 120
target-version = ['py38']  # или ваша версия Python

[tool.isort]
profile = "black"
line_length = 120